# httpy

./: .badges.md  .badges.rst  .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  README.md.html  README.rst  __init__.py  deploy.sh  detto.json  httpy.py  make_reqs.txt  mk.sh  pyproject.toml  runtests.sh  setup.py  test_httpy.py  testsupa.py
.cache/: wspost.com,408de79cf88cc3498b202d9044f316bb
.github/workflows/: makefile.yml  python-publish.yml
all_dist/: httpy-1.6.2-py3-none-any.whl  httpy-2.0.0-py3-none-any.whl  httpy-2.0.1-py3-none-any.whl  httpy-2.0.3-py3-none-any.whl  httpy-2.1.0-py3-none-any.whl  httpy-2.1.1-py3-none-any.whl
docs/: REQUIRES  httpy
docs/source/: Makefile  conf.py  docs.md.html  httpy  httpy.http2.hpack.rst  httpy.http2.hpack.static.rst  httpy.http2.rst  i.md  index.md  index.md.html  index.rst  mklao.sh  modules.rst
docs/source/_build/doctrees/: environment.pickle  httpy.doctree  modules.doctree
docs/source/_build/html/: .buildinfo  genindex.html  httpy.html  modules.html  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/_sources/: httpy.rst.txt
httpy/: __init__.py  cache.py  common.py  debugger.py  errors.py  file.py  headers.py  httpy.py  httpy.py.orig  httpy.py~  proto.py  response.py  ssl_context.py  stream.py  utils.py
httpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
httpy/http2/: connection.py  frame.py  priority.py  proto.py  socket_reader.py  stream.py  streams.py
httpy/http2/hpack/: errors.py~  hpack.py  integer.py.orig
httpy/http2/hpack/static/: __static_table.py  huffman_table.pickle  static_table.pickle  static_table.txt
httpy_client.egg-info/: PKG-INFO  SOURCES.txt
official_dist/: httpy-1.8.0-py3-none-any.whl  httpy-1.8.1-py3-none-any.whl
src/httpy/: alpn.py  cache.py  common.py  patterns.py  status.py  utils.py
src/httpy/http2/: __init__.py  frame.py  settings.py
src/httpy/http2/hpack/: __init__.py  const.py  table.py
tests/: __init__.py  async_request_tests.py  async_rr_tests.py  async_tests.py  httpy  run_all.sh  test_httpy.py
tests/h2tests/: __init__.py  __main__.py  async_gather_tests.py  async_gather_tests.py~  async_request_tests.py  async_request_tests.py~  async_rr_tests.py  async_stream_test.py  async_tests.py  async_tests.py~  httpy  proto_tests.py  proto_tests_old.py
unstable/: async_gather_tests.py  async_rr_tests.py  async_tests.py  conn_tests.py  proto_tests.py  proto_tests_old.py
unstable/httpy/: __init__.py  conn_tests.py  debugger.py  errors.py  frame_tests.py  httpy.py  proto_tests.py  status.py  utils.py
unstable/httpy/http2/: __init__.py  connection.py  error.py  frame.py  frame_queue.py  proto.py  settings.py  socket_reader.py  stream.py  streams.py  window.py
unstable/httpy/http2/hpack/: errors.py  hpack.py  huffman.py  integer.py  table.py
unstable/httpy/http2utils/: conn_tests.py  connection.py  error.py  frame.py  frame_queue.py  frame_tests.py  priority.py  settings.py  stream.py  streams.py
unstable/httpy/http2utils/hpack/: errors.py  hpack.py  huffman.py  integer.py  table.py
(+6 files in other folders)
